Skip to content

Build failure with freetype 2.5.1

FreeType 2.5.1 stripped the freefont/ subdirectory from their include files. The homepage states: "The directory layout of the (installed) FreeType header files has been simplified."

Due to this change, VLC fails to build with FreeType 2.5.1 (tested on Debian unstable and Ubuntu trusty):

../../doltlibtool  --tag=CC   --mode=compile gcc -std=gnu99 -DHAVE_CONFIG_H -I. -I../..  -DMODULE_NAME=$(p="libfreetype_plugin_la-freetype.lo"; p="${p##*/}"; p="${p#lib}"; echo "${p%_plugin*}") -DMODULE_NAME_IS_$(p="libfreetype_plugin_la-freetype.lo"; p="${p##*/}"; p="${p#lib}"; echo "${p%_plugin*}") -DMODULE_STRING=\"$(p="libfreetype_plugin_la-freetype.lo"; p="${p##*/}"; p="${p#lib}"; echo "${p%_plugin*}")\" -D__PLUGIN__ -I/usr/include/freetype2   -DHAVE_FONTCONFIG -I/usr/include/fribidi   -DHAVE_FRIBIDI -I../../include -I../../include -D_FORTIFY_SOURCE=2   -g -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -Wall -Wextra -Wsign-compare -Wundef -Wpointer-arith -Wbad-function-cast -Wwrite-strings -Wmissing-prototypes -Wvolatile-register-var -Werror-implicit-function-declaration -pipe -fvisibility=hidden -ffast-math -funroll-loops -fomit-frame-pointer -c -o libfreetype_plugin_la-freetype.lo `test -f 'freetype.c' || echo './'`freetype.c
freetype.c:93:30: fatal error: freetype/ftsynth.h: No such file or directory
 #include <freetype/ftsynth.h>
                              ^
compilation terminated.
make[5]: *** [libfreetype_plugin_la-freetype.lo] Error 1
make[5]: Leaving directory `/build/buildd/vlc-2.1.1+git20131130+r54283+16+10~ubuntu14.04.1/modules/text_renderer'

You need to include ftsynth.h instead of freetype/ftsynth.h for FreeType >= 2.5.1.

Please backport the fix to the 2.1 branch.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information