Freetype: fix compilation with 2.5.1

Close #10019